<resources>
    <string name="app_name">DTVKit Source</string>
    <string-array name="satellites">
        <item>Astra 28.2</item>
    </string-array>
    <string-array name="polarities">
        <item>horizontal</item>
        <item>vertical</item>
        <item>left</item>
        <item>right</item>
    </string-array>
    <string-array name="fec">
        <item>auto</item>
        <item>1/2</item>
        <item>2/3</item>
        <item>3/4</item>
        <item>5/6</item>
        <item>7/8</item>
        <item>1/4</item>
        <item>1/3</item>
        <item>2/5</item>
        <item>8/9</item>
        <item>9/10</item>
    </string-array>
    <string-array name="modulations">
        <item>auto</item>
        <item>qpsk</item>
        <item>8psk</item>
        <item>16qam</item>
    </string-array>
    <string-array name="cableModulations">
        <item>auto</item>
        <item>qam4</item>
        <item>qam8</item>
        <item>qam16</item>
        <item>qam32</item>
        <item>qam64</item>
        <item>qam128</item>
        <item>qam256</item>
    </string-array>
    <string name="strSearchNotStarted">Search not started</string>
    <string name="strSearchDvbsDescription">DVB-S channel tuner setup</string>
    <string name="strSearchDvbcDescription">DVB-C channel tuner setup</string>
    <string name="strSearchDvbtDescription">DVB-T channel tuner setup</string>
    <string name="strSearchIsdbtDescription">ISDB-T channel tuner setup</string>
    <string name="strStartSearch">Start Search</string>
    <string name="strManualSearch">Manual Search</string>
    <string name="strAutoSearch">Auto Search</string>
    <string name="strTextview">TextView</string>
    <string name="strTestString">TEST BINDER CONNECTION!!</string>
    <string name="strNetworkSearch">Network Search</string>
    <string name="strDVBS2">DVBS-2</string>
    <string name="strPlaceholder">Placeholder activity for product customization.</string>
    <string name="strImportSatellite">Import Satellites</string>
    <string name="strSetUp">Set Up</string>
    <string name="strSetUpNotFound">Setup Not Found!</string>
    <string name="strClearOld">Clear Old Search</string>
    <string name="strSearchMode">Search Mode:</string>
    <string name="strFecMode">Forward Error Correction Mode:</string>
    <string name="strModulationMode">Modulation Mode:</string>
    <string name="invalid_parameter">Invalid parameter!</string>
    <string name="strDvbc">DVB-C</string>
    <string name="strDvbt">DVB-T</string>
    <string name="strDvbs">DVB-S</string>
    <string name="strScanMenu">Scan menu</string>

    <string name="strStopSearch">Stop Search</string>
    <string name="manualSearch">Manual Search</string>
    <string name="autoSearch">Automatic Search</string>
    <string name="terrestrial">Terrestrial</string>
    <string name="satellite">Satellite</string>
    <string name="cable">Cable</string>
    <string name="searching">Searching</string>
    <string name="number_search_and_wait">Searching channel, please wait...</string>
    <string name="number_search_error">Searching channel error, Aborting...</string>
    <!-- manual search -->
    <string name="adtv_type">TV Type:</string>
    <string name="antenna_type">Antenna Type:</string>
    <string name="search_method">Search Method:</string>
    <string name="search_frequency">Channel Frequency:</string>
    <string name="search_frequency_hint">MHz</string>
    <string name="search_number">Channel Number:</string>
    <string name="search_number_hint">Number</string>
    <string name="search_confirm_network">Network select</string>
    <string name="search_confirm_lcn">Lcn select</string>
    <string name="dvbt_search_bandwidth">Bandwidth:</string>
    <string name="dvbt_search_mode">Mode:</string>
    <string name="dvbt_search_type">Type:</string>
    <string name="dvbc_search_mode">Mode:</string>
    <string name="dvbt_search_symbol_rate">Symbol Rate:</string>
    <string name="public_search_mode">Search Mode:</string>
    <string name="public_search_channel_freq">Channel Frequency:</string>
    <string name="public_search_channel_name">Channel Name:</string>
    <string name="public_dvb_search">DVB SEARCH</string>
    <string name="sync_tv_provider">Updating provider, please wait!</string>
    <string name="dvb_network_change">Dvb channels has changed, searching new channels !</string>
    <string name="dvb_network_change_confirm">Search</string>
    <string name="dvb_network_change_cancel">Cancel</string>
    <string name="operator_type_setting">Operator type setting</string>
    <string name="automatic_searching_setting">Automatic searching setting</string>
    <string name="mode_setting">Mode:</string>
    <string name="repetition_setting">Repetition:</string>
    <string name="time_setting">Time:</string>
    <string name="dvb_network_change_search_no_result">has not searched new channel !</string>
    <string name="dvb_network_change_search_channel_unavailable">has not searched more new channel !</string>
    <string name="notice_automatic_scan">It\'s time to do automatic searching with operator mode, scanning now?</string>
    <string name="manual_search_range">out of search frequency range, please input again !</string>

    <!-- pvr record delete -->
    <string name="pvr_record_confirm_delete_schedule">Please delete pvr schedules files firstly!</string>
    <string name="pvr_record_confirm_stop_record">Please cancel pvr schedules firstly!</string>
    <string name="pvr_record_confirm_ok">Action</string>
    <string name="pvr_record_confirm_cancel">Exit</string>
    <string name="pvr_record_confirm_deleting">Please wait ! deleting...</string>
    <string name="pvr_record_confirm_delete_done">Delete complete!</string>
    <string name="pvr_record_confirm_stop_done">Cancel complete!</string>
    <string name="strIsdbt">ISDB-T</string>
    <string name="public_dtv_search">DTV SEARCH</string>

    <!-- timeshift -->
    <string name="timeshift_unavailable_program">Timeshift is unavailable by program</string>
    <string name="timeshift_unsupported_system">Timeshift is unsupported by system</string>

    <!-- play -->
    <string name="play_scrambled">Scrambled</string>

    <!-- ci authentication -->
    <string name="play_ci_authentication">Ci plus authenticating, please wait !</string>
    <string name="ci_profile_update_available">CI Update Available</string>
    <string name="ci_profile_channel_updating">CI channels updating, please wait !</string>
    <string name="ci_profile_channel_update_confirm">update</string>
    <string name="ci_profile_channel_update_cancel">cancel</string>

    <!-- TargetRegion -->
    <string name="target_region_title">Select preferred region for programme sorting.</string>
    <string name="primary_region">Primary Region</string>
    <string name="secondary_region">Secondary Region</string>
    <string name="tertiary_region">Tertiary Region</string>
    <string name="no_sub_regions">No sub-regions</string>
    <string name="target_region_country">Country</string>
    <string name="other_countries">Other Countries</string>

    <!-- other scan strings-->
    <string name="strOperator">Operator</string>
    <string name="strLcnOnOff">Lcn On</string>
    <string name="strDvbcAutoScanType">Auto Scan Type</string>
    <string name="strDvbcNetworkId">Network ID:</string>
    <string name="strChannelType">Channel Type</string>
    <string name="strServiceType">Service Type</string>
    <string name="tv_mode_option">Mode Option:</string>

    <string name="strContinue">Continue</string>
    <string name="strSkip">Skip</string>
    <string name="strNoTeletext">No teletext</string>

    <string name="allow">ALLOW</string>
    <string name="deny">DENY</string>
    <!-- tkgs strings-->
    <string name="string_tkgs_operate_mode">Operate Mode</string>
    <string name="string_tkgs_locator_list">TKGS Locator List</string>
    <string name="string_tkgs_hidden_locator_list">TKGS Hidden Locators</string>
    <string name="string_tkgs_prefer_list">Prefer List</string>
    <string name="string_tkgs_update">TKGS Update</string>
    <string name="string_tune_update_tip">TKGS tune update</string>
    <string name="string_reset_table_version">Reset Table Version</string>
    <string name="string_tkgs_locator_edit">*Keep pressing the OK key to edit locator list</string>
    <string name="tkgs_setup_prefered_list_Type">Please setup Preferred list Type !</string>
    <string name="tkgs_setup_channel_list_change">The channel list already up-to-date. Do you wish to continue with the download ?</string>
    <string name="string_select_edit_method">Please select an editing method</string>

</resources>
