<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:gravity="center"
    android:orientation="vertical">

    <!--<ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:src="@drawable/dtvkit" />-->

    <TextView
        android:id="@+id/dvb_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/public_dtv_search"
        android:textSize="@dimen/dvb_search_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/select_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:weightSum="4"
        android:orientation="vertical">

        <Button
            android:id="@+id/select_dvbc"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:visibility="gone"
            android:text="@string/strDvbc" />

        <Button
            android:id="@+id/select_dvbt"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:visibility="gone"
            android:text="@string/strDvbt" />

        <Button
            android:id="@+id/select_dvbs"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:visibility="gone"
            android:text="@string/strDvbs" />

        <Button
            android:id="@+id/select_isdbt"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:visibility="gone"
            android:text="@string/strIsdbt" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:text="@string/dvbt_search_type" />

            <Spinner
                android:id="@+id/spinner_dvb_system"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3" />
        </LinearLayout>

        <Button
            android:id="@+id/button_scan_menu"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:text="@string/strScanMenu" />

        <Button
            android:id="@+id/select_setting"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector"
            android:text="@string/strSettings" />
    </LinearLayout>
</LinearLayout>
