<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="50dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mode_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mode_text"
                android:layout_width="@dimen/automatic_searching_item_width"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/mode_setting" />

            <Spinner
                android:id="@+id/mode_spinner"
                android:layout_width="@dimen/automatic_searching_item_width"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/time_text"
                android:layout_width="@dimen/automatic_searching_item_width"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/time_setting" />

            <EditText
                android:id="@+id/hour_text"
                android:layout_width="@dimen/automatic_searching_item_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="2"
                android:gravity="center|center_horizontal"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="@dimen/automatic_searching_item_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|center_horizontal"
                android:text=":" />

            <EditText
                android:id="@+id/minute_text"
                android:layout_width="@dimen/automatic_searching_item_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="2"
                android:gravity="center|center_horizontal"
                android:inputType="number" />

            <TextView
                android:id="@+id/hours"
                android:layout_width="@dimen/automatic_searching_item_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textSize="@dimen/automatic_searching_hour_text"
                android:singleLine="true"
                android:text="@string/strSettingsAutoSearchingHourFormat" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/repetition_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/repetition_text"
                android:layout_width="@dimen/automatic_searching_item_width"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/repetition_setting" />

            <Spinner
                android:id="@+id/repetition_setting_spinner"
                android:layout_width="@dimen/automatic_searching_item_width"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
